--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,6 +1,15 @@
-<h1>{{ question.question_text }}</h1>
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }}</li>
-{% endfor %}
-</ul>
+<form action="{% url 'polls:vote' questions.id %}" method="post">
+    {% csrf_token %}
+    <fieldset>
+        <legend><h1>{{ questions.question_text }}</h1></legend>
+        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+        {% for choice in questions.choices_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+        {% endfor %}
+        {{questions.choices_set.all}}
+
+        random
+    </fieldset>
+    <input type="submit" value="Vote">
+</form>
